[package]
name = "poem-stackvec"
version = "0.1.0"
edition = "2024"

[dependencies]
poem-openapi = "5.1.13"
serde = "1.0.219"
serde_json = "1.0.140"
smallvec = { version = "1.10.0", optional = true }
arrayvec = { version = "0.7.3", optional = true }

[features]
smallvec = ["dep:smallvec"]
arrayvec = ["dep:arrayvec"]
default = ["smallvec", "arrayvec"]
